--- a/login.html
+++ b/login.html
@@ -13,7 +13,8 @@
     <!-- Bootstrap CSS (Keep if MDB doesn't include its own full Bootstrap) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body, html {
+        body,
+        html {
             height: 100%;
         }
     </style>
@@ -39,18 +40,22 @@
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                             <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                                                <input type="password" id="formPasswordLogin" class="form-control" required />
+                                                <input type="password" id="formPasswordLogin" class="form-control"
+                                                    required />
                                                 <label class="form-label" for="formPasswordLogin">Password</label>
                                             </div>
                                         </div>
                                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                            <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg">Login</button>
+                                            <button type="submit" data-mdb-button-init data-mdb-ripple-init
+                                                class="btn btn-primary btn-lg">Login</button>
                                         </div>
-                                        <p class="text-center mt-3">Don't have an account? <a href="registration.html">Register here</a>.</p>
+                                        <p class="text-center mt-3">Don't have an account? <a
+                                                href="registration.html">Register here</a>.</p>
                                     </form>
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="img-fluid" alt="Login image">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+                                        class="img-fluid" alt="Login image">
                                 </div>
                             </div>
                         </div>
@@ -60,11 +65,12 @@
         </div>
     </section>
     <!-- MDB -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.0/mdb.umd.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.0/mdb.umd.min.js"></script>
     <!-- Bootstrap Bundle with Popper (Keep if not fully covered by MDB's JS) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        document.getElementById('loginFormNew').addEventListener('submit', function(event) {
+        document.getElementById('loginFormNew').addEventListener('submit', function (event) {
             event.preventDefault();
             // Add actual login logic here (e.g., validate credentials with a server)
             console.log('Login form submitted');
