--- a/registration.html
+++ b/registration.html
@@ -49,20 +49,23 @@
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                             <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                                                <input type="password" id="formPassword" class="form-control" required />
+                                                <input type="password" id="formPassword" class="form-control"
+                                                    required />
                                                 <label class="form-label" for="formPassword">Password</label>
                                             </div>
                                         </div>
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                             <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                                                <input type="password" id="formConfirmPassword" class="form-control" required />
-                                                <label class="form-label" for="formConfirmPassword">Repeat your password</label>
+                                                <input type="password" id="formConfirmPassword" class="form-control"
+                                                    required />
+                                                <label class="form-label" for="formConfirmPassword">Repeat your
+                                                    password</label>
                                             </div>
                                         </div>
                                         <div class="form-check d-flex justify-content-center mb-4">
-                                            <input class="form-check-input me-2" type="checkbox" value="" id="formAgreeTerms"
-                                                required />
+                                            <input class="form-check-input me-2" type="checkbox" value=""
+                                                id="formAgreeTerms" required />
                                             <label class="form-check-label" for="formAgreeTerms">
                                                 I agree all statements in <a href="#!">Terms of service</a>
                                             </label>
@@ -71,7 +74,8 @@
                                             <button type="submit" data-mdb-button-init data-mdb-ripple-init
                                                 class="btn btn-primary btn-lg">Register</button>
                                         </div>
-                                        <p class="text-center mt-3">Already have an account? <a href="login.html">Login here</a>.
+                                        <p class="text-center mt-3">Already have an account? <a href="login.html">Login
+                                                here</a>.
                                         </p>
                                     </form>
                                 </div>
@@ -87,7 +91,8 @@
         </div>
     </section>
     <!-- MDB -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.0/mdb.umd.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.0/mdb.umd.min.js"></script>
     <!-- Bootstrap Bundle with Popper (Keep if not fully covered by MDB's JS) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
