--- a/index.html
+++ b/index.html
@@ -20,27 +20,114 @@
       color: white;
       padding: 100px 0;
       text-align: center;
+      min-height: 60vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      animation: fadeInDown 1.2s;
     }
 
-    .hero-section h1 {
-      font-size: 3.5rem;
-      font-weight: bold;
+    @keyframes fadeInDown {
+      0% {
+        opacity: 0;
+        transform: translateY(-60px);
+      }
+
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
-    .hero-section p {
-      font-size: 1.25rem;
-      margin-bottom: 30px;
+    .hero-section h1,
+    .hero-section p,
+    .hero-section a {
+      animation: fadeInUp 1.2s;
+    }
+
+    @keyframes fadeInUp {
+      0% {
+        opacity: 0;
+        transform: translateY(60px);
+      }
+
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .feature-icon {
       font-size: 3rem;
       color: #0d6efd;
+      transition: transform 0.3s;
+    }
+
+    .feature-icon:hover {
+      transform: scale(1.2) rotate(-8deg);
+      color: #6610f2;
     }
 
     .footer {
       background-color: #f8f9fa;
       padding: 20px 0;
       text-align: center;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 991.98px) {
+      .hero-section {
+        padding: 60px 0;
+        min-height: 40vh;
+      }
+
+      .hero-section h1 {
+        font-size: 2.2rem;
+      }
+    }
+
+    @media (max-width: 767.98px) {
+      .hero-section {
+        padding: 40px 0;
+        min-height: 30vh;
+      }
+
+      .hero-section h1 {
+        font-size: 1.5rem;
+      }
+
+      .container.mt-5.mb-5 {
+        margin-top: 2rem !important;
+        margin-bottom: 2rem !important;
+      }
+    }
+
+    @media (max-width: 575.98px) {
+      .hero-section {
+        padding: 20px 0;
+        min-height: 20vh;
+      }
+
+      .hero-section h1 {
+        font-size: 1.1rem;
+      }
+
+      .container.mt-5.mb-5 {
+        margin-top: 1rem !important;
+        margin-bottom: 1rem !important;
+      }
+    }
+
+    /* Animate features on scroll */
+    .feature-animate {
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.7s cubic-bezier(.68, -0.55, .27, 1.55);
+    }
+
+    .feature-animate.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
   </style>
 </head>
@@ -92,23 +179,23 @@
       <p class="lead">Here's what makes our platform great.</p>
     </div>
     <div class="row text-center">
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4 feature-animate">
         <div class="p-3">
-          <i class="bi bi-speedometer2 feature-icon mb-3"></i> <!-- Example Bootstrap Icon -->
+          <i class="bi bi-speedometer2 feature-icon mb-3"></i>
           <h3>Fast Performance</h3>
           <p>Experience lightning-fast interactions and seamless navigation.</p>
         </div>
       </div>
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4 feature-animate">
         <div class="p-3">
-          <i class="bi bi-shield-lock feature-icon mb-3"></i> <!-- Example Bootstrap Icon -->
+          <i class="bi bi-shield-lock feature-icon mb-3"></i>
           <h3>Secure Platform</h3>
           <p>Your data is safe with our top-notch security measures.</p>
         </div>
       </div>
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4 feature-animate">
         <div class="p-3">
-          <i class="bi bi-people feature-icon mb-3"></i> <!-- Example Bootstrap Icon -->
+          <i class="bi bi-people feature-icon mb-3"></i>
           <h3>User Friendly</h3>
           <p>Intuitive design for an easy and enjoyable user experience.</p>
         </div>
@@ -126,7 +213,8 @@
       </div>
       <div class="col-md-6 text-center">
         <img src="https://th.bing.com/th/id/OIP.vlD09ruoeI6pgB4WB24U2QHaFj?cb=iwc2&rs=1&pid=ImgDetMain"
-          class="img-fluid rounded shadow-lg" alt="Responsive image" style="max-height: 300px;">
+          class="img-fluid rounded shadow-lg" alt="Responsive image"
+          style="max-height: 300px; animation: fadeInUp 1.2s;">
       </div>
     </div>
   </div>
@@ -157,6 +245,23 @@
   </footer>
   <!-- Add Bootstrap Icons CSS for feature icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  <script>
+    // Animate features on scroll
+    function animateFeaturesOnScroll() {
+      const features = document.querySelectorAll('.feature-animate');
+      const triggerBottom = window.innerHeight * 0.85;
+      features.forEach(feature => {
+        const featureTop = feature.getBoundingClientRect().top;
+        if (featureTop < triggerBottom) {
+          feature.classList.add('visible');
+        } else {
+          feature.classList.remove('visible');
+        }
+      });
+    }
+    window.addEventListener('scroll', animateFeaturesOnScroll);
+    window.addEventListener('load', animateFeaturesOnScroll);
+  </script>
 </body>
 
 </html>
