--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
           <li class="nav-item">
             <a class="nav-link" href="registration.html">Register</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dashboard.html">Dashboard</a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
