--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Awesome Website</title>
+  <title>Murad's AI World</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap JavaScript Bundle with Popper -->
@@ -135,7 +135,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">MyWebsite</a>
+      <a class="navbar-brand" href="#">Murad's AI</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -169,8 +169,8 @@
   <!-- Hero Section -->
   <div class="hero-section">
     <div class="container">
-      <h1>Welcome to My Awesome Website!</h1>
-      <p>Discover amazing things and explore our features.</p>
+      <h1>Welcome to Murad's AI World!</h1>
+      <p>Exploring the fascinating world of Artificial Intelligence.</p>
       <a href="registration.html" class="btn btn-primary btn-lg">Get Started</a>
       <a href="#features" class="btn btn-outline-light btn-lg ms-2">Learn More</a>
     </div>
@@ -243,7 +243,7 @@
 
   <footer class="footer mt-auto py-3 bg-light">
     <div class="container text-center">
-      <span class="text-muted">&copy; 2025 MyWebsite. All Rights Reserved.</span>
+      <span class="text-muted">&copy; 2025 Murad's AI. All Rights Reserved.</span>
     </div>
   </footer>
   <!-- Add Bootstrap Icons CSS for feature icons -->
